cmake_minimum_required(VERSION 3.20)
project(The_C_Programming_Language C)

set(CMAKE_C_STANDARD 11)

add_executable(The_C_Programming_Language
        Chapter-1/Exercise-1.01.c
        Chapter-1/Exercise-1.02.c
        Chapter-1/Exercise-1.03.c
        Chapter-1/Exercise-1.04.c
        Chapter-1/Exercise-1.05.c
        Chapter-1/Exercise-1.06.c
        Chapter-1/Exercise-1.07.c
        Chapter-1/Exercise-1.08.c
        Chapter-1/Exercise-1.09.c
        Chapter-1/Exercise-1.10.c
        Chapter-1/Exercise-1.12.c
        Chapter-1/Exercise-1.13.c
        Chapter-1/Exercise-1.14.c
        Chapter-1/Exercise-1.15.c)
